This should fix the missalignment in the header and footer of the pagenated table lists.

--- a/branding/css/rhn-listview.css
+++ b/branding/css/rhn-listview.css
@@ -473,6 +473,7 @@ DIV.filter-input INPUT
 	vertical-align: bottom;
 	margin-top: 5px;
 	padding: 0px;
+	float: right;
 }
 .list-infotext STRONG
 {
